testsuite/tests/v1/fun_call/positional_after_named/test.out
Error: Positional argument after a named one
   ╭─[ <working-dir>/script.lkql:2:16 ]
   │
 2 │ print(add(a=1, 2))
   │           ─┬─  ┬  
   │            │   ╰── This positional argument is after a named one
   │            │      
   │            ╰────── Hint: Previous named argument is here
───╯
